--- a/Front/style.css
+++ b/Front/style.css
@@ -1,4 +1,7 @@
-#myChart {
-    max-width: 750px;
-    max-height: 400px;
+#myChart1, #myChart2 {
+    max-width: 60%;
+    max-height: 380px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 2%;
 }
