--- a/Front/style.css
+++ b/Front/style.css
@@ -1,7 +1,21 @@
+body{
+    background-color: rgb(187, 187, 187);
+    min-height: 950px;
+}
+
 #myChart1, #myChart2 {
-    max-width: 60%;
+    max-width: 76%;
     max-height: 380px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 12%;
+    margin-right: 12%;
     margin-bottom: 2%;
 }
+
+#corpo{
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-bottom: 2%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
